apps/base/vaultwarden/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`vault.local.kagiso.me`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
